// Copyright 2024 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.backend;
option go_package = "github.com/bucketeer-io/bucketeer/proto/backend";

import "google/api/annotations.proto";

import "proto/feature/feature.proto";

message GetFeatureRequest {
  string environment_id = 1;
  string id = 2;
}

message GetFeatureResponse {
  feature.Feature feature = 1;
}

message UpdateFeatureRequest {
  string comment = 1;
  string environment_id = 2;
  feature.Feature feature = 3;
}

message UpdateFeatureResponse {}

service PublicAPIService {
  rpc GetFeature(GetFeatureRequest) returns (GetFeatureResponse) {
    option (google.api.http) = {
      get: "environment/{environment-id}/features/{feature-id}"
    };
  }
  rpc UpdateFeature(UpdateFeatureRequest) returns (UpdateFeatureResponse) {
    option (google.api.http) = {
      patch: "environment/{environment-id}/features/{feature-id}"
    };
  }
}
